--- a/assets/iconfont.css
+++ b/assets/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4145137 */
-  src: url('//at.alicdn.com/t/c/font_4145137_q3622p87si.woff2?t=1688259814715') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4145137_q3622p87si.woff?t=1688259814715') format('woff'),
-       url('//at.alicdn.com/t/c/font_4145137_q3622p87si.ttf?t=1688259814715') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4145137_vnhv47wlrj.woff2?t=1688263736029') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4145137_vnhv47wlrj.woff?t=1688263736029') format('woff'),
+       url('//at.alicdn.com/t/c/font_4145137_vnhv47wlrj.ttf?t=1688263736029') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-sousuo:before {
+  content: "\e63d";
 }
 
 .icon-fangzi01-copy:before {
