--- a/assets/iconfont.css
+++ b/assets/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4145137 */
-  src: url('//at.alicdn.com/t/c/font_4145137_ffwvgmwo6ka.woff2?t=1688354294842') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4145137_ffwvgmwo6ka.woff?t=1688354294842') format('woff'),
-       url('//at.alicdn.com/t/c/font_4145137_ffwvgmwo6ka.ttf?t=1688354294842') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4145137_sgt8gg0eds.woff2?t=1688561461184') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4145137_sgt8gg0eds.woff?t=1688561461184') format('woff'),
+       url('//at.alicdn.com/t/c/font_4145137_sgt8gg0eds.ttf?t=1688561461184') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-jianhao:before {
+  content: "\e729";
 }
 
 .icon-xinxi:before {
