--- a/assets/iconfont.css
+++ b/assets/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4145137 */
-  src: url('//at.alicdn.com/t/c/font_4145137_d1w9nhcz4ne.woff2?t=1688998896592') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4145137_d1w9nhcz4ne.woff?t=1688998896592') format('woff'),
-       url('//at.alicdn.com/t/c/font_4145137_d1w9nhcz4ne.ttf?t=1688998896592') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4145137_q7k3zix8q7.woff2?t=1689495562154') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4145137_q7k3zix8q7.woff?t=1689495562154') format('woff'),
+       url('//at.alicdn.com/t/c/font_4145137_q7k3zix8q7.ttf?t=1689495562154') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-zhixiangshang:before {
+  content: "\e8f5";
+}
+
+.icon-zhixiangxia:before {
+  content: "\e8f6";
 }
 
 .icon-mel-right:before {
