--- a/assets/iconfont.css
+++ b/assets/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4145137 */
-  src: url('//at.alicdn.com/t/c/font_4145137_q7k3zix8q7.woff2?t=1689495562154') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4145137_q7k3zix8q7.woff?t=1689495562154') format('woff'),
-       url('//at.alicdn.com/t/c/font_4145137_q7k3zix8q7.ttf?t=1689495562154') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4145137_rr11cu8guqk.woff2?t=1689606729916') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4145137_rr11cu8guqk.woff?t=1689606729916') format('woff'),
+       url('//at.alicdn.com/t/c/font_4145137_rr11cu8guqk.ttf?t=1689606729916') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-aixin_shixin:before {
+  content: "\eca1";
 }
 
 .icon-zhixiangshang:before {
