新增第三十三天练习

--- a/assets/iconfont.css
+++ b/assets/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4145137 */
-  src: url('//at.alicdn.com/t/c/font_4145137_72e9blo1328.woff2?t=1689776013264') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4145137_72e9blo1328.woff?t=1689776013264') format('woff'),
-       url('//at.alicdn.com/t/c/font_4145137_72e9blo1328.ttf?t=1689776013264') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4145137_be73az1n0a.woff2?t=1689995446285') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4145137_be73az1n0a.woff?t=1689995446285') format('woff'),
+       url('//at.alicdn.com/t/c/font_4145137_be73az1n0a.ttf?t=1689995446285') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-baocun:before {
+  content: "\e936";
+}
+
+.icon-bianji:before {
+  content: "\e600";
+}
+
+.icon-tianjia:before {
+  content: "\e622";
+}
+
+.icon-shanchu:before {
+  content: "\e8b6";
 }
 
 .icon-fuzhi1:before {
